# mos_metro_test_task

./: .flake8  .gitignore  README.md  pre-commit  pyproject.toml
app/: main.py
app/business_services/: __init__.py  news.py
app/clients/metro/: __init__.py  news_client.py
app/configs/: __init__.py  base.py  cache.py  cron.py  db.py
app/cron/: parse_news.py  worker.py
app/db/: __init__.py
app/db/repos/: __init__.py  base.py  news.py
app/models/: news.py
app/schemas/: __init__.py  parse_news.py
app/transport/api/: __init__.py  news.py
deploy/: Dockerfile  compose.yaml  example.env
migrations/: env.py
migrations/versions/: 97abc6fe7486_add_model_news.py
