[tool.poetry]
name = "mos-metro-test-task"
version = "0.1.0"
description = ""
authors = ["Daniil <70702619+danial29rus@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
httpx = "^0.28.1"
alembic = "^1.14.0"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
bs4 = "^0.0.2"
arq = "^0.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
